<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.order.OrderFormStepTwoActivity">


    <TextView
        android:id="@+id/createOrderTitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/createOrderTitle"
        android:textAlignment="center"
        android:textColor="@color/app_colour"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="100dp"
        android:baselineAligned="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <EditText
            android:id="@+id/barcodeOrderedTxt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:enabled="false"
            android:hint="Código de barras"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/productOrderedTxt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:enabled="false"
            android:hint="Producto"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/branchSpinner"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <Spinner
            android:id="@+id/expeditionTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <CheckBox
            android:id="@+id/acceptsPartialExpeditionTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Acepta expedición parcial" />

        <EditText
            android:id="@+id/addressTxt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:enabled="false"
            android:hint="Dirección"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/orderedQtyTxt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="Cantidad pedir"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="PASO 2: Datos del pedido"
        android:textAlignment="center"
        android:textColor="@color/app_colour"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createOrderTitle2"
        app:layout_constraintVertical_bias="0.038" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/cancelButtonReception2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BackButton" />

        <Button
            android:id="@+id/anexosBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Ir a anexos" />

        <Button
            android:id="@+id/acceptBtnReception2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/AcceptButton" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>